--- a/GP App/Info.plist
+++ b/GP App/Info.plist
@@ -2,52 +2,52 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>UIApplicationSceneManifest</key>
-	<dict>
-		<key>CFBundleAlternateIcons</key>
-		<dict>
-			<key>GP Orange</key>
-			<dict>
-				<key>CFBundleIconFiles</key>
-				<array>
-					<string>AppIcon2</string>
-				</array>
-			</dict>
-			<key>GP Pink</key>
-			<dict>
-				<key>CFBundleAlternateIcons</key>
-				<array>
-					<string>AppIcon3</string>
-				</array>
-			</dict>
-		</dict>
-		<key>UIApplicationSupportsMultipleScenes</key>
-		<false/>
-		<key>UISceneConfigurations</key>
-		<dict>
-			<key>UIWindowSceneSessionRoleApplication</key>
-			<array>
-				<dict>
-					<key>UISceneConfigurationName</key>
-					<string>Default Configuration</string>
-					<key>UISceneDelegateClassName</key>
-					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
-					<key>UISceneStoryboardFile</key>
-					<string>Main</string>
-				</dict>
-			</array>
-		</dict>
-	</dict>
-	<key>UIContentSizeCategoryLimits</key>
-	<dict>
-		<key>UIContentSizeCategorySmall</key>
-		<string>14</string>
-		<key>UIContentSizeCategoryMedium</key>
-		<string>16</string>
-		<key>UIContentSizeCategoryLarge</key>
-		<string>18</string>
-		<key>UIContentSizeCategoryExtraLarge</key>
-		<string>20</string>
-	</dict>
+    <key>UIApplicationSceneManifest</key>
+    <dict>
+        <key>CFBundleAlternateIcons</key>
+        <dict>
+            <key>AppIcon1</key>
+            <dict>
+                <key>CFBundleIconFiles</key>
+                <array>
+                    <string>AppIcon1</string>
+                </array>
+            </dict>
+            <key>AppIcon2</key>
+            <dict>
+                <key>CFBundleIconFiles</key>
+                <array>
+                    <string>AppIcon2</string>
+                </array>
+            </dict>
+        </dict>
+        <key>UIApplicationSupportsMultipleScenes</key>
+        <false/>
+        <key>UISceneConfigurations</key>
+        <dict>
+            <key>UIWindowSceneSessionRoleApplication</key>
+            <array>
+                <dict>
+                    <key>UISceneConfigurationName</key>
+                    <string>Default Configuration</string>
+                    <key>UISceneDelegateClassName</key>
+                    <string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
+                    <key>UISceneStoryboardFile</key>
+                    <string>Main</string>
+                </dict>
+            </array>
+        </dict>
+    </dict>
+    <key>UIContentSizeCategoryLimits</key>
+    <dict>
+        <key>UIContentSizeCategorySmall</key>
+        <string>14</string>
+        <key>UIContentSizeCategoryMedium</key>
+        <string>16</string>
+        <key>UIContentSizeCategoryLarge</key>
+        <string>18</string>
+        <key>UIContentSizeCategoryExtraLarge</key>
+        <string>20</string>
+    </dict>
 </dict>
 </plist>
