- New approach alternate icons

--- a/GP App/Info.plist
+++ b/GP App/Info.plist
@@ -4,23 +4,6 @@
 <dict>
     <key>UIApplicationSceneManifest</key>
     <dict>
-        <key>CFBundleAlternateIcons</key>
-        <dict>
-            <key>AppIcon1</key>
-            <dict>
-                <key>CFBundleIconFiles</key>
-                <array>
-                    <string>AppIcon1</string>
-                </array>
-            </dict>
-            <key>AppIcon2</key>
-            <dict>
-                <key>CFBundleIconFiles</key>
-                <array>
-                    <string>AppIcon2</string>
-                </array>
-            </dict>
-        </dict>
         <key>UIApplicationSupportsMultipleScenes</key>
         <false/>
         <key>UISceneConfigurations</key>
@@ -38,23 +21,6 @@
             </array>
         </dict>
     </dict>
-    <key>CFBundleAlternateIcons</key>
-    <dict>
-        <key>AppIcon1</key>
-        <dict>
-            <key>CFBundleIconFiles</key>
-            <array>
-                <string>AppIcon1</string>
-            </array>
-        </dict>
-        <key>AppIcon2</key>
-        <dict>
-            <key>CFBundleIconFiles</key>
-            <array>
-                <string>AppIcon2</string>
-            </array>
-        </dict>
-    </dict>
     <key>UIContentSizeCategoryLimits</key>
     <dict>
         <key>UIContentSizeCategorySmall</key>
@@ -65,6 +31,37 @@
         <string>18</string>
         <key>UIContentSizeCategoryExtraLarge</key>
         <string>20</string>
+    </dict>
+    <key>CFBundleIcons</key>
+    <dict>
+        <key>CFBundlePrimaryIcon</key>
+        <dict>
+            <key>CFBundleIconFiles</key>
+            <array>
+                <string>AppIcon</string>
+            </array>
+        </dict>
+        <key>CFBundleAlternateIcons</key>
+        <dict>
+            <key>AppIcon1</key>
+            <dict>
+                <key>CFBundleIconFiles</key>
+                <array>
+                    <string>AppIcon1</string>
+                </array>
+                <key>UIPrerenderedIcon</key>
+                <false/>
+            </dict>
+            <key>AppIcon2</key>
+            <dict>
+                <key>CFBundleIconFiles</key>
+                <array>
+                    <string>AppIcon2</string>
+                </array>
+                <key>UIPrerenderedIcon</key>
+                <false/>
+            </dict>
+        </dict>
     </dict>
 </dict>
 </plist>
